--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=EMPLOYEE MANAGEMENT SYSTEM
+spring.datasource.username=root
+spring.datasource.password=tushar1234
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
